[gd_scene load_steps=13 format=3 uid="uid://dvjr0rf6ciart"]

[ext_resource type="Script" path="res://scripts/root.gd" id="1_wafjg"]
[ext_resource type="Texture2D" uid="uid://c8171s1yn26la" path="res://resource_packs/image/chess_board.png" id="2_e5n4u"]
[ext_resource type="PackedScene" uid="uid://be072dmcpimuf" path="res://scene/pieces.tscn" id="2_h5j5n"]
[ext_resource type="AudioStream" uid="uid://ctygtnay057fs" path="res://resource_packs/sound/piece_move.mp3" id="4_mnwkr"]
[ext_resource type="AudioStream" uid="uid://cvv8jlvh7axfy" path="res://resource_packs/sound/piece_capture.mp3" id="5_lg3vx"]
[ext_resource type="PackedScene" uid="uid://do5ti1a4mm8nb" path="res://scene/selected_overlay.tscn" id="6_tcrqt"]
[ext_resource type="AudioStream" uid="uid://battgochst2d8" path="res://resource_packs/sound/castle.mp3" id="6_xn2vp"]
[ext_resource type="AudioStream" uid="uid://cmjlcn5inm6ny" path="res://resource_packs/sound/promote.mp3" id="7_8wsrm"]
[ext_resource type="PackedScene" uid="uid://bjj4ps8qj5jkq" path="res://scene/hint_overlay.tscn" id="7_susdb"]
[ext_resource type="PackedScene" uid="uid://crejthgjofaqd" path="res://scene/promotion_gui.tscn" id="10_efjbo"]
[ext_resource type="AudioStream" uid="uid://qjf0jripaq4k" path="res://resource_packs/sound/game_start.mp3" id="11_gukba"]
[ext_resource type="AudioStream" uid="uid://cpq12k7chx13m" path="res://resource_packs/sound/game_end.mp3" id="11_sot5y"]

[node name="Root" type="Node2D"]
script = ExtResource("1_wafjg")

[node name="ChessBoard" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(640, 360)
scale = Vector2(1.05, 1.05)
texture = ExtResource("2_e5n4u")

[node name="Pieces" parent="." instance=ExtResource("2_h5j5n")]
visible = false

[node name="SelectedOverlay" parent="." instance=ExtResource("6_tcrqt")]
visible = false
position = Vector2(71.7933, 65.0383)

[node name="HintOverlay" parent="." instance=ExtResource("7_susdb")]
visible = false

[node name="FlipBoard" type="Button" parent="."]
offset_left = 118.0
offset_top = 184.0
offset_right = 205.0
offset_bottom = 215.0
text = "Flip Board"

[node name="NewGame" type="Button" parent="."]
offset_left = 110.0
offset_top = 240.0
offset_right = 212.0
offset_bottom = 271.0
text = "New Game"

[node name="PromotionGUI" parent="." instance=ExtResource("10_efjbo")]

[node name="GameState" type="Label" parent="."]
offset_left = 3.0
offset_top = 134.0
offset_right = 313.0
offset_bottom = 160.0
text = "Press New Game to Start"
horizontal_alignment = 1

[node name="SoundPack" type="Node2D" parent="."]

[node name="PieceMoveSound" type="AudioStreamPlayer2D" parent="SoundPack"]
stream = ExtResource("4_mnwkr")
volume_db = 15.0

[node name="PieceCaptureSound" type="AudioStreamPlayer2D" parent="SoundPack"]
stream = ExtResource("5_lg3vx")
volume_db = 15.0

[node name="CastlingSound" type="AudioStreamPlayer2D" parent="SoundPack"]
stream = ExtResource("6_xn2vp")
volume_db = 15.0

[node name="PromoteSound" type="AudioStreamPlayer2D" parent="SoundPack"]
stream = ExtResource("7_8wsrm")
volume_db = 15.0

[node name="NewGameSound" type="AudioStreamPlayer2D" parent="SoundPack"]
stream = ExtResource("11_gukba")
volume_db = 15.0

[node name="EndGameSound" type="AudioStreamPlayer2D" parent="SoundPack"]
stream = ExtResource("11_sot5y")
volume_db = 15.0

[connection signal="button_down" from="FlipBoard" to="." method="_on_flip_board_button_down"]
[connection signal="button_down" from="NewGame" to="." method="_on_new_game_button_down"]
